<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/SleeveLayout"
    >

    <TextView
        android:id="@+id/sleeveHint"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/sleeveNamePrompt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/SleeveNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="DEFAULT TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/countHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/countPrompt"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardCountDisplay"
        android:textColor="@color/highlightTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginVertical="25dp"
        android:layout_marginRight="20dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/countHint"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textView7"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="70dp"
        android:textSize="15sp"
        android:text="@string/widthPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/width"

        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        android:layout_marginLeft="10dp"
        android:text="69"
        android:textSize="20sp"

        app:layout_constraintLeft_toRightOf="@id/textView7"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textView9"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@id/width"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        android:text="@string/heightPrompt" />

    <TextView
        android:id="@+id/height"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/textView9"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:text="69" />

    <TextView
        android:id="@+id/SKUhint"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SKUHint"
        app:layout_constraintLeft_toRightOf="@id/height"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@id/height"

        />

    <TextView
        android:id="@+id/SKU"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6969"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/SKUhint"
        app:layout_constraintBottom_toBottomOf="@id/SKUhint"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:text="@string/SleevesPerPack"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="110"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        android:paddingLeft="5dp"
        android:textColor="@color/highlightTextColor"

        />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:attr/listDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>